Tu mensaje de commit

--- a/src/results_notebooks/ML_landcover_classification.ipynb
+++ b/src/results_notebooks/ML_landcover_classification.ipynb
@@ -12,6 +12,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ML Land Cover Classification - Project Break II \n",
+    "## Elaborado por Eduardo Perez Hernandez\n",
+    "## Data Science Bootcamp - The Bridge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importar librerías"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,6 +46,13 @@
     "# Configuración visual\n",
     "%matplotlib inline\n",
     "sns.set(style=\"whitegrid\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importar dataset"
    ]
   },
   {
@@ -266,6 +289,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estructura del dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -376,6 +406,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocesamiento para entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -387,6 +424,13 @@
     "\n",
     "# Separar en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento del modelo"
    ]
   },
   {
@@ -830,6 +874,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reporte de resultados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -880,6 +931,13 @@
     "plt.xlabel(\"Predicción\")\n",
     "plt.ylabel(\"Valor Real\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exportar Modelo"
    ]
   },
   {
